# mqlite

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  compose.yml  mqlite.toml
.github/workflows/: ci.yml
crates/mqlite-client/: Cargo.toml
crates/mqlite-client/examples/: async_client.rs  callback.rs  polling.rs
crates/mqlite-client/src/: async_client.rs  callback.rs  client.rs  config.rs  error.rs  events.rs  lib.rs  packet_id.rs  session.rs  tls.rs  will.rs
crates/mqlite-core/: Cargo.toml
crates/mqlite-core/src/: error.rs  lib.rs  packet.rs  varint.rs
crates/mqlite-server/: Cargo.toml
crates/mqlite-server/src/: bridge.rs  cleanup.rs  client.rs  client_handle.rs  config.rs  fanout.rs  main.rs  proxy.rs  publish_encoder.rs  route_cache.rs  server.rs  shared.rs  subscription.rs  sys_tree.rs  util.rs  websocket.rs  will.rs  worker.rs  write_buffer.rs
crates/mqlite-server/src/auth/: acl.rs  static_auth.rs
crates/mqlite-server/src/config/: acl.rs  auth.rs  bridge.rs  limits.rs  log.rs  mod.rs  mqtt.rs  persistence.rs  prometheus.rs  server.rs  session.rs  tls.rs  websocket.rs
crates/mqlite-server/src/handlers/: connect.rs  disconnect.rs  mod.rs  publish.rs  qos.rs  subscribe.rs
crates/mqlite-server/src/persistence/: mod.rs  retained.rs
docs/: ARCHITECTURE.md  CLIENT-ARCHITECTURE.md  RESTRUCTURE.md  persistence-design.md
docs/features/: sys-topics.md
examples/proxy/: README.md  compose.yml  haproxy.cfg  mqlite.toml
src/: client.rs  client_handle.rs  config.rs  error.rs  main.rs  packet.rs  prometheus.rs  publish_encoder.rs  server.rs  shared.rs  subscription.rs  sys_tree.rs  util.rs  worker.rs  write_buffer.rs
src/auth/: acl.rs  mod.rs
