[package]
name = "mqlite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mqlite"
path = "src/main.rs"

[dependencies]
mio = { version = "1.0", features = ["net", "os-poll"] }
thiserror = "2.0"
bytes = "1.9"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
libc = "0.2"
ahash = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
