[workspace]
members = ["crates/mqlite-core", "crates/mqlite-server", "crates/mqlite-client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bherbruck/mqlite"

[workspace.dependencies]
# Internal crates
mqlite-core = { path = "crates/mqlite-core" }
mqlite-client = { path = "crates/mqlite-client" }

# Shared dependencies
bytes = "1.9"
thiserror = "2.0"
log = "0.4"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
