[package]
name = "mqlite-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT client library for mqlite"

[dependencies]
mqlite-core = { workspace = true }

# Async I/O
mio = { version = "1.0", features = ["net", "os-poll"] }

# Error handling
thiserror = { workspace = true }

# Data structures
bytes = { workspace = true }
parking_lot = { workspace = true }

# Logging
log = { workspace = true }

# TLS (optional)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Async runtime (optional)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util"], optional = true }
tokio-rustls = { version = "0.26", optional = true }

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
async-tokio = ["dep:tokio", "dep:tokio-rustls", "tls"]

[[example]]
name = "polling"

[[example]]
name = "callback"

[[example]]
name = "async_client"
required-features = ["async-tokio"]
